njh-import/v1.5.373/package-build-evidence.md
# Final package pickup evidence

Version: `1.5.373`
Commit: `397fb40ab1e6`
Output directory: `/Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6`
Source commit attestation: `source-commit-attestation.json`.
Representative task readiness: `recipient-config-merge-v2=pass, recipient-config-merge-original-v1=known_failure` (`representative-task-readiness.json` is authoritative).
These per-task statuses are not a general model-correctness claim; only a recipient-side semantic oracle receipt can establish a task result.

The archive password was loaded from `NJH_RELEASE_ARCHIVE_PASSWORD` and is not recorded here.

| Type | Artifact | SHA-256 | Bytes | Notes |
| --- | --- | --- | ---: | --- |
| package | `njh-cli-v1.5.373.7z` | `e50e072b1e79d8a85758ea059a1149057c6bd2e19481cef7f9d95b61de1e968f` | 19,424,178 | built by package:final |
| package | `njh-gateway-v1.5.373.7z` | `8a951c54027948daeaafa31168e0e6d7d56c49dd22bfb0d66ea0249a2b3e71fe` | 2,011,442 | built by package:final |
| package | `njh-win-laptop-v1.5.373.7z` | `bc99a27dc86332d2d2e99f2b13aeaae2ec74df4293603ab16c164055f65dc4af` | 1,733,072 | built by package:final |

## Actual command output

### Build dist bundles

Command: `npm run build`
Exit status: `0`

stdout:
    
    > njh-cli@1.5.373 build
    > tsup
    
    CLI Building entry: {"njh-cli":"src/index.ts","njh-gateway":"gateway/db-gateway/index.ts"}
    CLI Using tsconfig: tsconfig.json
    CLI tsup v8.5.1
    CLI Using tsup config: /Users/nam64/njh-hub-0809/tsup.config.ts
    CLI Target: node22
    CLI Cleaning output folder
    CJS Build start
    CJS dist/njh-gateway.js 432.55 KB
    CJS dist/njh-cli.js     6.99 MB
    CJS ⚡️ Build success in 3371ms

stderr:
    "isDeepStrictEqual" is imported from external module "util" but never used in "dist/njh-gateway.js".
    "createHmac" is imported from external module "crypto" but never used in "dist/njh-gateway.js".

### Build C5 CLI archive

Command: `npx --no-install tsx scripts/build-c5-release-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/njh-cli-v1.5.373.7z --json`
Exit status: `0`

stdout:
    {"version":"1.5.373","out":"/Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/njh-cli-v1.5.373.7z","distBannerVersion":"1.5.373","distBannerMatchesPackage":true,"distFreshnessChecked":true,"distMtimeMs":1786552950853.3257,"latestBuildInputPath":"src/knowledge/bounded-exact/types.ts","latestBuildInputMtimeMs":1786550758375.5889,"fileCount":313,"contentManifestSha256":"b421122968cbf7fd118d666fed77965ae3937fbbcdfe71623082ca9af4182569","missingRequiredPaths":[],"skippedOptionalPaths":[],"representativeTaskReadiness":{"schema_version":3,"required_task_contracts":["recipient-config-merge-v2","recipient-config-merge-original-v1"],"tasks":[{"contract_id":"recipient-config-merge-v2","status":"pass","eligible_models":["qwen2.5-coder:7b"],"evidence":{"execution":"completed","backend":"available","oracle":"passed","models":["qwen2.5-coder:7b"],"observations":["The 100 scored direct qwen2.5-coder:7b runs recorded 93 strict standalone-JSON passes and semantic correctness after bounded fence extraction in all 100 runs; this is a semantic 100/100 claim, not a raised formatting pass rate.","The fence appeared in 3 of 50 warm runs and 3 of 40 API-confirmed cold runs, so the formatting envelope was observed in both cohorts rather than attributed to cold start.","qwen2.5-coder:0.5b failed the same simplified task and is ineligible to back this contract."]},"measurement":{"report":"reports/recipient-target-node-simple-task-measurement-2026-08-11.json","rate_status":"UNSEEDED_EMPIRICAL_RATE","reproducibility":"NONDETERMINISTIC_SAMPLE","usage_policy":"OBSERVATION_ONLY_NO_GUARANTEE_OR_HOST_PREDICTION","runs":300,"strict_passes":285,"semantic_passes":300,"host_observations":[{"host":"om-baseline","hardware":"OM baseline","corporate_dev_node":false,"runs":100,"strict_passes":93,"semantic_passes":100},{"host":"mac-new-tb","hardware":"mac-new-tb remote development node","corporate_dev_node":false,"runs":100,"strict_passes":92,"semantic_passes":100},{"host":"oracle","hardware":"oracle remote development node","corporate_dev_node":false,"runs":100,"strict_passes":100,"semantic_passes":100}],"claims":{"semantic_correctness":{"scope":"machine-invariant","runs":300,"passes":300,"measuring_hosts":["om-baseline","mac-new-tb","oracle"]},"strict_contract":{"scope":"machine-dependent","runs":300,"passes":285,"measuring_hosts":["om-baseline","mac-new-tb","oracle"],"delivery_host_measurement":"not_measured_here"}},"machine_coverage":{"corporate_dev_node_coverage":"none","caveat":"None of the three measured machines is a corporate dev node; semantic correctness was invariant across these observed machines, but the kit destination hardware remains unmeasured."}},"response_format_policy":{"accepted_well_formed_formats":["standalone-json","markdown-json-fence-stripped"],"fence_normalization_effect":"well-formedness-only","semantic_correctness_effect":"unchanged"},"required_before_usable_claim":"recipient-side-semantic-oracle-receipt","limitations":["This declaration covers only the fixed recipient-config-merge-v2 two-level merge task.","Fence normalization changes only what is accepted as WELL-FORMED; it changes nothing about correctness. The measured claim is semantic correctness in 100 of 100 direct runs, not a raised formatting pass rate.","The task no longer tests arrays, null deletion, object recreation, retry semantics, or arbitrary multi-layer merge behavior.","The release build does not invoke a recipient inference backend or create a semantic oracle receipt.","Installation, backend reachability, and artifact existence do not establish task correctness."]},{"contract_id":"recipient-config-merge-original-v1","status":"known_failure","eligible_models":[],"evidence":{"execution":"completed","backend":"available","oracle":"failed","models":["qwen2.5-coder:7b","qwen3-coder:30b"],"observations":["The fresh repeated study completed 20 direct runs on each model, with semantic passes after fence extraction at 0 of 20 for qwen2.5-coder:7b and 0 of 20 for qwen3-coder:30b.","The 7B model repeatedly reordered the model array and retained or moved deleted fields; the 30B model retained retry.backoffMs in all 20 runs.","This measured limit is declared rather than hidden behind the passing simplified task; cdx_shell's deterministic execution path is a separate follow-up."]},"measurement":{"report":"reports/recipient-original-task-model-reliability-2026-08-11.json","rate_status":"UNSEEDED_EMPIRICAL_RATE","reproducibility":"NONDETERMINISTIC_SAMPLE","usage_policy":"OBSERVATION_ONLY_NO_GUARANTEE_OR_HOST_PREDICTION","runs":40,"strict_passes":0,"semantic_passes":0,"host_observations":[{"host":"om-original-study","hardware":"OM baseline","corporate_dev_node":false,"runs":40,"strict_passes":0,"semantic_passes":0}],"claims":{"semantic_correctness":{"scope":"machine-dependent","runs":40,"passes":0,"measuring_hosts":["om-original-study"],"delivery_host_measurement":"not_measured_here"},"strict_contract":{"scope":"machine-dependent","runs":40,"passes":0,"measuring_hosts":["om-original-study"],"delivery_host_measurement":"not_measured_here"}},"machine_coverage":{"corporate_dev_node_coverage":"none","caveat":"The original-task study was measured on the OM baseline only, which is not a corporate dev node; no cross-machine portability claim is made."}},"response_format_policy":{"accepted_well_formed_formats":["standalone-json","markdown-json-fence-stripped"],"fence_normalization_effect":"well-formedness-only","semantic_correctness_effect":"unchanged"},"required_before_usable_claim":"recipient-side-semantic-oracle-receipt","limitations":["This is the original multi-rule configuration merge with nested deletion, recreation, exact array ordering, and scalar precedence requirements.","The measured 0 of 40 semantic result is a known failure in this direct-model setup, not a claim that the deterministic utility path cannot solve the task.","No model is currently eligible to back a correctness claim for this task; the task remains listed so the simplified pass cannot hide this limit.","The report's 40-run denominator contains 20 qwen2.5-coder:7b runs and 20 qwen3-coder:30b runs.","A recipient must not infer general model quality or task readiness from the simplified task's separate pass."]}],"measured_task_contracts":["recipient-config-merge-v2","recipient-config-merge-original-v1"]},"files":[".claude/agents/security-reviewer.md",".claude/agents/test-reviewer.md","assets/bin/README.md","assets/emoji-fonts/LICENSES.md","assets/emoji-fonts/NotoColorEmoji.ttf","assets/fonts/D2Coding-Ver1.3.2-20180524.ttf","assets/fonts/JetBrainsMono-Regular.ttf","assets/fonts/LICENSES.md","assets/fonts/NanumGothicCoding-2.5.ttf","assets/icons/LICENSES.md","assets/icons/njh-cli.ico","assets/icons/README.md","assets/ime/korean-ime-vscode-tips.md","assets/ime/README.md","assets/nerd-fonts/JetBrainsMonoNerdFont-Regular.ttf","assets/nerd-fonts/LICENSES.md","assets/terminal-config/gitbash-bashrc-snippet.sh","assets/terminal-config/intellij-terminal-settings.xml","assets/terminal-config/powershell-profile-snippet.ps1","assets/terminal-config/README.md","assets/terminal-config/vscode-settings-merge.json","assets/terminal-config/vscode-terminal-settings.json","assets/terminal-config/windows-terminal-profile.json","assets/terminal-config/windows-terminal-settings.json","assets/themes/dark.json","assets/themes/github-dark.json","assets/themes/github-light.json","assets/themes/high-contrast.json","assets/themes/light.json","assets/themes/monochrome.json","assets/themes/README.md","bundled-hooks/coding-quality/coding-quality-hooks.test.ts","bundled-hooks/coding-quality/README.md","bundled-hooks/coding-quality/scripts/check-old-string.mjs","bundled-hooks/coding-quality/scripts/convention-context.mjs","bundled-hooks/coding-quality/scripts/hook-io.mjs","bundled-hooks/coding-quality/scripts/lint-on-edit.mjs","bundled-hooks/coding-quality/scripts/test-on-complete.mjs","bundled-hooks/coding-quality/settings.example.json","bundled-skills/_shared/airflow-platform-footguns.md","bundled-skills/_shared/deep_validate.py","bundled-skills/_shared/expert_assist.mjs","bundled-skills/_shared/README.md","bundled-skills/airflow-closed-network-ops/profiles/low-spec-guarded.md","bundled-skills/airflow-closed-network-ops/references/01-runtime-and-deploy.md","bundled-skills/airflow-closed-network-ops/references/02-troubleshooting.md","bundled-skills/airflow-closed-network-ops/references/03-secrets-and-variables.md","bundled-skills/airflow-closed-network-ops/references/04-catalog-factory.md","bundled-skills/airflow-closed-network-ops/references/05-airflow26-ops.md","bundled-skills/airflow-closed-network-ops/references/06-current-bundle-map.md","bundled-skills/airflow-closed-network-ops/scripts/airflow_offline_runbook.mjs","bundled-skills/airflow-closed-network-ops/SKILL.md","bundled-skills/airflow-python-batch-dag-gen/profiles/low-spec-guarded.md","bundled-skills/airflow-python-batch-dag-gen/README.md","bundled-skills/airflow-python-batch-dag-gen/references/01-hard-rules.md","bundled-skills/airflow-python-batch-dag-gen/references/02-workflow.md","bundled-skills/airflow-python-batch-dag-gen/references/03-templates.md","bundled-skills/airflow-python-batch-dag-gen/references/04-validation.md","bundled-skills/airflow-python-batch-dag-gen/references/05-examples.md","bundled-skills/airflow-python-batch-dag-gen/references/06-conversion-invariants.md","bundled-skills/airflow-python-batch-dag-gen/references/07-manifest-factory-forms.md","bundled-skills/airflow-python-batch-dag-gen/references/rule-set.md","bundled-skills/airflow-python-batch-dag-gen/scripts/airflow_manifest_gen.mjs","bundled-skills/airflow-python-batch-dag-gen/scripts/airflow_manifest_gen.py","bundled-skills/airflow-python-batch-dag-gen/scripts/validate_airflow_dag.mjs","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-airflow-python-batch-dag-gen.py","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.cmd","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.ps1","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.sh","bundled-skills/airflow-python-batch-dag-gen/SKILL.md","bundled-skills/airflow-spring-batch-autogen/profiles/low-spec-guarded.md","bundled-skills/airflow-spring-batch-autogen/scripts/spring-batch-catalog-gen.mjs","bundled-skills/airflow-spring-batch-autogen/SKILL.md","bundled-skills/lowspec-tuning/profiles/low-spec-guarded.md","bundled-skills/lowspec-tuning/references/eval-ab-design.md","bundled-skills/lowspec-tuning/references/model-class-profiles.md","bundled-skills/lowspec-tuning/references/technique-matrix.md","bundled-skills/lowspec-tuning/SKILL.md","bundled-skills/mybatis-mapper-patterns/profiles/low-spec-guarded.md","bundled-skills/mybatis-mapper-patterns/scripts/mybatis_mapper.mjs","bundled-skills/mybatis-mapper-patterns/SKILL.md","bundled-skills/mybatis-query-performance/profiles/low-spec-guarded.md","bundled-skills/mybatis-query-performance/scripts/analyze_mapper_performance.mjs","bundled-skills/mybatis-query-performance/SKILL.md","bundled-skills/spring-boot/profiles/low-spec-guarded.md","bundled-skills/spring-boot/references/01-architecture.md","bundled-skills/spring-boot/references/02-security-data.md","bundled-skills/spring-boot/references/03-core-rules.md","bundled-skills/spring-boot/references/rule-set.md","bundled-skills/spring-boot/scripts/validate-spring-boot.py","bundled-skills/spring-boot/SKILL.md","bundled-skills/springboot-actuator/profiles/low-spec-guarded.md","bundled-skills/springboot-actuator/references/01-actuator-diagnostics.md","bundled-skills/springboot-actuator/SKILL.md","bundled-skills/springboot-actuator/templates/endpoint-checklist.md","bundled-skills/springboot-actuator/templates/metrics-request.json","bundled-skills/sql-gateway/profiles/low-spec-guarded.md","bundled-skills/sql-gateway/references/01-operations.md","bundled-skills/sql-gateway/scripts/sql_gateway_request.mjs","bundled-skills/sql-gateway/SKILL.md","bundled-skills/sql-gateway/tests/sql-gateway-request.test.mjs","bundled-skills/vue2/profiles/low-spec-guarded.md","bundled-skills/vue2/references/01-options-api-maintenance.md","bundled-skills/vue2/references/02-migration-readiness.md","bundled-skills/vue2/references/03-core-rules.md","bundled-skills/vue2/references/rule-set.md","bundled-skills/vue2/scripts/validate-vue2.py","bundled-skills/vue2/scripts/vue2_assist.mjs","bundled-skills/vue2/SKILL.md","bundled-skills/vue3-migration/profiles/low-spec-guarded.md","bundled-skills/vue3-migration/references/01-output-contract.md","bundled-skills/vue3-migration/references/02-mapping-rules.md","bundled-skills/vue3-migration/references/03-risk-and-validation.md","bundled-skills/vue3-migration/references/04-large-project-plan.md","bundled-skills/vue3-migration/references/rule-set.md","bundled-skills/vue3-migration/scripts/validate_vue3.mjs","bundled-skills/vue3-migration/scripts/validate_vue3.py","bundled-skills/vue3-migration/scripts/validate-vue3-migration.py","bundled-skills/vue3-migration/scripts/vue3_migrate.mjs","bundled-skills/vue3-migration/scripts/vue3_migrate.py","bundled-skills/vue3-migration/SKILL.md","check-llm-server.sh","connect_mcpapi.cmd","connect_mcpapi.js","connect_mcpapi.sh","default-NJH.md","default-settings.json","demo/.gitignore","demo/njh-demo-api/package.json","demo/njh-demo-api/README.md","demo/njh-demo-api/SCENARIOS.md","demo/njh-demo-api/server.js","demo/njh-demo-api/uploads/welcome.log","demo/njh-demo-convert/abc.vue","demo/njh-demo-convert/SCENARIOS.md","demo/njh-demo-convert/wless/wlessUsageDailyCret.py","demo/njh-demo-convert/wlessUsageDailyCretJob.py","demo/njh-demo-depgraph/app/order_api.py","demo/njh-demo-depgraph/customer/customer_policy.py","demo/njh-demo-depgraph/expected-output/이력기록-예시.md","demo/njh-demo-depgraph/expected-output/DEPENDENCY_GRAPH.md","demo/njh-demo-depgraph/expected-output/dependency-graph.html","demo/njh-demo-depgraph/inventory/inventory_service.py","demo/njh-demo-depgraph/order/order_service.py","demo/njh-demo-depgraph/README.md","demo/njh-demo-depgraph/SCENARIOS.md","demo/njh-demo-depgraph/settlement/settlement_service.py","demo/njh-demo-depgraph/shared/domain_model.py","demo/njh-demo-docs/raw/결제_장애_0701.log","demo/njh-demo-docs/raw/결제_취소_이중처리.log","demo/njh-demo-docs/raw/결제_한도_초과_이슈.log","demo/njh-demo-docs/raw/로그인_소셜_연동.log","demo/njh-demo-docs/raw/로그인_실패율_급증.log","demo/njh-demo-docs/raw/로그인_이슈_추적.log","demo/njh-demo-docs/raw/사양변경_결제화면.log","demo/njh-demo-docs/raw/알림_중복발송_원인분석.log","demo/njh-demo-docs/raw/알림서버_점검_회의.log","demo/njh-demo-docs/raw/야간배치_스케줄_변경.log","demo/njh-demo-docs/raw/인프라_점검_random.log","demo/njh-demo-docs/raw/주간회의_0706.log","demo/njh-demo-docs/raw/회의록_긴급_0702.log","demo/njh-demo-docs/raw/auth-2fa-rollout.log","demo/njh-demo-docs/raw/auth-service-spec-memo.log","demo/njh-demo-docs/raw/auth-token-expiry-notes.log","demo/njh-demo-docs/raw/batch-데이터_정합성.log","demo/njh-demo-docs/raw/batch-정산-지연.log","demo/njh-demo-docs/raw/batch-job-error-dump.log","demo/njh-demo-docs/raw/batch-retry-policy.log","demo/njh-demo-docs/raw/db-connection-pool-issue.log","demo/njh-demo-docs/raw/demo-node-deploy-log-scrap.log","demo/njh-demo-docs/raw/incident-0710-mixed.log","demo/njh-demo-docs/raw/incident-20260703-notify.log","demo/njh-demo-docs/raw/meeting-notes-payment-2026.log","demo/njh-demo-docs/raw/misc-logs-tail.log","demo/njh-demo-docs/raw/monthly-close-batch.log","demo/njh-demo-docs/raw/notify-server-scaling.log","demo/njh-demo-docs/raw/notify-template-변경.log","demo/njh-demo-docs/raw/ops-oncall-handover.log","demo/njh-demo-docs/raw/payment-gateway-timeout.log","demo/njh-demo-docs/raw/payment-refund-bug.log","demo/njh-demo-docs/raw/PG_연동_변경사항.log","demo/njh-demo-docs/raw/postmortem-draft-payment.log","demo/njh-demo-docs/raw/push-token-cleanup.log","demo/njh-demo-docs/raw/scratch-메모-이것저것.log","demo/njh-demo-docs/raw/sms-발송_실패.log","demo/njh-demo-docs/raw/sso-migration-memo.log","demo/njh-demo-docs/raw/system-ops-random-notes.log","demo/njh-demo-docs/raw/TODO_결제팀.log","demo/njh-demo-docs/raw/TODO_backlog_mixed.log","demo/njh-demo-docs/raw/weekly-sync-0713.log","demo/njh-demo-docs/README.md","demo/njh-demo-docs/SCENARIOS.md","demo/njh-demo-playbook.html","demo/njh-demo-vue-migration/app.js","demo/njh-demo-vue-migration/index.html","demo/njh-demo-vue-migration/README.md","demo/njh-demo-vue-migration/SCENARIOS.md","demo/njh-demo-vue-migration/serve.js","demo/njh-demo-vue-migration/vendor/vue2.global.js","demo/njh-demo-vue-migration/vendor/vue3.global.js","demo/README.md","dist/njh-cli.js","docs/로컬LLM-임베딩OCR-슬라이드.html","docs/로컬LLM-통합-운영문서.html","docs/사용자/01-빠른-시작.md","docs/사용자/02-설치-및-업데이트.md","docs/사용자/03-기본-사용법.md","docs/사용자/04-문제-해결.md","docs/사용자/05-배포-번들-검증.md","docs/사용자/06-인증서-문제-해결.md","docs/사용자/06-post-import-first-30-minutes.md","docs/사용자/게이트-연결-테스트.md","docs/사용자/설치가이드.html","docs/사용자/index.html","docs/사용자/TUI-시연-가이드.md","docs/타겟점검-AI-고도화-검토보고.html","docs/폐쇄망-배포-운영-가이드.md","docs/codi-playground-prompt-main.md","docs/codi-playground-prompt-mini.md","docs/import-guide.md","docs/merge-hub-recovery.md","docs/njh-cli-도입검토-발표.html","docs/njh-cli-소개-발표-amber.html","docs/njh-cli-소개-발표-cyan.html","docs/njh-cli-소개-발표-violet.html","docs/njh-cli-소개-발표.html","docs/ollama-prompt-cache-operations.md","docs/presentation/captures-2026-08-02/00-full-session.png","docs/presentation/captures-2026-08-02/01-natural-request.png","docs/presentation/captures-2026-08-02/02-source-discovery.png","docs/presentation/captures-2026-08-02/03-approval-diff.png","docs/presentation/captures-2026-08-02/04-final-summary.png","docs/presentation/captures-2026-08-02/05-result-file.png","docs/presentation/captures-2026-08-02/06-pk-impact-analysis.png","docs/presentation/captures-2026-08-02/del_yn-01-request.png","docs/presentation/captures-2026-08-02/del_yn-02-read-context.png","docs/presentation/captures-2026-08-02/del_yn-03-approval-diff.png","docs/presentation/captures-2026-08-02/del_yn-04-result.png","docs/presentation/captures-2026-08-02/pk-impact-analysis.png","docs/presentation/captures/01-request-input.png","docs/presentation/captures/02-tool-call.png","docs/presentation/captures/03-result-summary.png","docs/presentation/captures/04-file-created.png","docs/presentation/captures/05-open-result.png","docs/presentation/captures/06-completion-report.png","docs/presentation/njh-2slide-ppt2013-safe.html","docs/presentation/njh-2slide-rich.html","docs/presentation/njh-2slide-static.html","docs/presentation/njh-2slide-v2.pptx","docs/presentation/njh-slide1-v2.pptx","docs/skill-selection.md","docs/tools-reference/connection-profiles.md","docs/tools-reference/consolidate-merge.md","docs/tools-reference/delete_file.md","docs/tools-reference/describe_tool.md","docs/tools-reference/diff_apply.md","docs/tools-reference/edit_file.md","docs/tools-reference/http_request.md","docs/tools-reference/list_directory.md","docs/tools-reference/load_skill.md","docs/tools-reference/make_directory.md","docs/tools-reference/memory_get.md","docs/tools-reference/memory_search.md","docs/tools-reference/njh-api-doctor.md","docs/tools-reference/read_file.md","docs/tools-reference/read_json_schema.md","docs/tools-reference/read_symbol.md","docs/tools-reference/request_user_input.md","docs/tools-reference/run_command.md","docs/tools-reference/search_files.md","docs/tools-reference/search_grep.md","docs/tools-reference/search_replace.md","docs/tools-reference/sql_query.md","docs/tools-reference/stat_path.md","docs/tools-reference/tool_search.md","docs/tools-reference/verify-gateway-upgrade.md","docs/tools-reference/write_file.md","docs/unified-gateway-client-setup.md","docs/USER_SETTINGS.md","install.cmd","njh","njh.cmd","njh.ps1","package.json","README.md","representative-task-readiness.json","scripts/create-windows-shortcut.ps1","scripts/create-windows-shortcut.sh","scripts/install-bundled-skills.mjs","scripts/local-llm-import/diagnose-model.sh","scripts/local-llm-import/lib/runner-profile.sh","scripts/local-llm-import/ollama-memwatch.sh","scripts/local-llm-import/ollama-start.sh","scripts/local-llm-import/ollama-status.sh","scripts/local-llm-import/ollama-stop.sh","scripts/local-llm-import/setup-backend.sh","scripts/local-llm-import/setup-model.sh","scripts/merge-terminal-config.cjs","scripts/merge-terminal-config.sh","scripts/njh-api-doctor.cmd","scripts/njh-api-doctor.mjs","scripts/njh-api-doctor.sh","scripts/njh-connect-doctor.cmd","scripts/njh-connect-doctor.mjs","scripts/njh-connect-doctor.sh","scripts/njh-settings-json-diagnosis.mjs","scripts/njh-toolcall-doctor.sh","scripts/restore-terminal-config.sh","settings-mcpapi.example.json","settings-unified-gateway.example.json","setup.cmd","setup.ps1","setup.sh"],"archiveRootLayoutVerified":true,"archiveManifestVerified":true,"archiveExclusionsVerified":true,"archiveLauncherInstallerVerified":true,"archiveCliExecuted":true,"archiveCliVersion":"1.5.373","archiveCliBytes":2130688,"archiveSha256":"e50e072b1e79d8a85758ea059a1149057c6bd2e19481cef7f9d95b61de1e968f","archiveBytes":19424178,"archiveEntryCount":313,"archiveUncompressedBytes":32385082,"archiveListedSuccessfully":true,"previousArchive":null,"previousEntryCount":null,"previousUncompressedBytes":null}

stderr:
    (empty)

### Build Gateway archive

Command: `npx --no-install tsx scripts/build-gateway-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/njh-gateway-v1.5.373.7z --json`
Exit status: `0`

stdout:
    {"version":"1.5.373","out":"/Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/njh-gateway-v1.5.373.7z","fileCount":40,"files":["설치가이드-통합.html","backend-kit/cleanup-legacy.sh","backend-kit/diagnose-model.sh","backend-kit/ollama-memwatch.sh","backend-kit/ollama-model-residency-operations.md","backend-kit/ollama-start.sh","backend-kit/ollama-status.sh","backend-kit/ollama-stop.sh","backend-kit/runner-profile.sh","backend-kit/setup-backend.sh","backend-kit/setup-model.sh","diagnostics/check-from-pc.sh","diagnostics/collect-logs.sh","diagnostics/diagnose.sh","diagnostics/e2e-gap1-policy.cjs","diagnostics/e2e-smoke.sh","diagnostics/gateway-3node-loadtest.md","diagnostics/gateway-3node-loadtest.mjs","diagnostics/measure-ap-readiness.mjs","diagnostics/measure-gateway.mjs","diagnostics/redact-diagnostics.cjs","docs/field-operations-guide.md","docs/FIELD-TEST-CHECKLIST.md","docs/README.md","import-guide.md","install-all.sh","ops/deploy-guide.json","ops/deploy.sh","ops/restart.sh","ops/start.sh","ops/status.sh","ops/stop.sh","ops/verify-upgrade.mjs","ops/with-user-bashrc-env.sh","runtime/njh-cli.js","runtime/njh-gateway.js","runtime/settings.example.json","scripts/launch-pinned-llama-server.mjs","scripts/measure-llama-server-prefix-cache.mjs","setup-gateway.sh"],"contentManifestSha256":"cfb0cf7ba74e0bee7c758b52c573a8cfd153de852cc4dcadafa9656fb988cca3","serverImportArtifact":"njh-gateway-v1.5.373.tar.gz","serverImportSha256":"0a99737d3a0363a687d5ea7639c75d8869f5359b8dabde7335eeccd185c72cb3","serverImportBytes":2011070,"outerFileCount":1,"outerFiles":["njh-gateway-v1.5.373.tar.gz"],"archiveSha256":"8a951c54027948daeaafa31168e0e6d7d56c49dd22bfb0d66ea0249a2b3e71fe","archiveBytes":2011442,"distBannerVersion":"1.5.373","distFreshnessChecked":true,"latestBuildInputPath":"package.json","latestBuildInputMtimeMs":1786550758256.8755,"distMtimeMs":1786552942144.0251}

stderr:
    (empty)

### Build Windows laptop archive

Command: `npx --no-install tsx scripts/build-windows-laptop-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/njh-win-laptop-v1.5.373.7z --json`
Exit status: `0`

stdout:
    {
      "archivePath": "/Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/njh-win-laptop-v1.5.373.7z",
      "files": [
        "default-NJH.md",
        "default-settings.json",
        "laptop-guide.html",
        "local-ollama-NJH.md",
        "local-ollama-settings.json",
        "measure-igpu-ab.sh",
        "measure-laptop.sh",
        "njh-cli.js",
        "optimize-laptop-memory.sh",
        "README.md",
        "recorded-ollama-generate.json",
        "recorded-ollama-tags.json",
        "setup-local-llm.sh",
        "start-local-llm.sh",
        "stress-gpu-limit.sh",
        "tune-gpu-ctx.sh",
        "upgrade-ollama.sh",
        "verify-local-llm.sh"
      ],
      "totalBytes": 2548075,
      "version": "1.5.373"
    }

stderr:
    (empty)

### Run automatic package safety gate

Command: `npx --no-install tsx scripts/verify-release-package-safety.ts --package-dir /Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6 --report /Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/package-build-evidence.md --version 1.5.373 --out /Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/safety-gate.json --json`
Exit status: `0`

stdout:
    {"schema_version":1,"status":"pass","report":"/Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6/package-build-evidence.md","package_directory":"/Users/nam64/njh-kits/package-pickup-2026-08-13-v1.5.373-397fb40ab1e6","version":"1.5.373","packages":[{"kind":"cli","status":"pass","artifact":"njh-cli-v1.5.373.7z","version":"1.5.373","expected_sha256":"e50e072b1e79d8a85758ea059a1149057c6bd2e19481cef7f9d95b61de1e968f","actual_sha256":"e50e072b1e79d8a85758ea059a1149057c6bd2e19481cef7f9d95b61de1e968f","expected_bytes":19424178,"actual_bytes":19424178,"version_markers":{"dist/njh-cli.js":"1.5.373"},"scanned_text_files":287,"scanned_text_bytes":6757904,"scanned_binary_files":26,"leak_hits":0},{"kind":"gateway","status":"pass","artifact":"njh-gateway-v1.5.373.7z","version":"1.5.373","expected_sha256":"8a951c54027948daeaafa31168e0e6d7d56c49dd22bfb0d66ea0249a2b3e71fe","actual_sha256":"8a951c54027948daeaafa31168e0e6d7d56c49dd22bfb0d66ea0249a2b3e71fe","expected_bytes":2011442,"actual_bytes":2011442,"version_markers":{"runtime/njh-cli.js":"1.5.373","runtime/njh-gateway.js":"1.5.373"},"scanned_text_files":80,"scanned_text_bytes":6909910,"scanned_binary_files":1,"leak_hits":0},{"kind":"win-laptop","status":"pass","artifact":"njh-win-laptop-v1.5.373.7z","version":"1.5.373","expected_sha256":"bc99a27dc86332d2d2e99f2b13aeaae2ec74df4293603ab16c164055f65dc4af","actual_sha256":"bc99a27dc86332d2d2e99f2b13aeaae2ec74df4293603ab16c164055f65dc4af","expected_bytes":1733072,"actual_bytes":1733072,"version_markers":{"njh-cli.js":"1.5.373"},"scanned_text_files":18,"scanned_text_bytes":2548075,"scanned_binary_files":0,"leak_hits":0}]}

stderr:
    (empty)
